--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
